--- a/timetable-sose-2019.html
+++ b/timetable-sose-2019.html
@@ -4,7 +4,10 @@ layout: default
 
 <section class="section">
     <div class="container">
-        <h2 class="title is-1">Zeitplan Sommersemester 2018</h2>
+        <h2 class="title is-1" style="display: inline-block; margin-right: 5px">Zeitplan Sommersemester 2018</h2> <button class="button is-1" href="#" onclick="javascript:cal.download('Web-Technologien')">iCal</button>
+        <script>
+            var cal = ics()
+        </script>
         {% include /functions/zeitplan.html modul="web-technologien" %}
     </div>
 </section>
