--- a/timetable.html
+++ b/timetable.html
@@ -1,9 +1,10 @@
 --- 
-layout: default 
+layout: default
+title: Zeitplan
 --- 
 
 <section class="section">
-    <div class="container" data-starting-date="date-{{site.data.dates["week-1"]["day-1"]["datum"]}}">
+    <div class="container" data-starting-date="date-{{site.data['dates-web-technologien']['week-1']['day-1']['datum']}}">
         <h2 class="title is-1" style="display: inline-block; margin-right: 5px">Zeitplan</h2> <button class="button is-1" href="#" onclick="javascript:cal.download('Web-Technologien')">iCal</button>
         <script>
             var cal = ics()
