--- a/timetable.html
+++ b/timetable.html
@@ -9,7 +9,7 @@ title: Zeitplan
         <script>
             var cal = ics()
         </script>
-        {% include /functions/zeitplan.html modul="projekt" %}
+        {% include /functions/zeitplan.html modul="web-technologien" %}
     </div>
 </section>
 
